code25_all/scala/16712328.txt
scala> 1 + 1
res0: Int = 2

scala> 1.+(1)
warning: there were 1 deprecation warning(s); re-run with -deprecation for details
res1: Double = 2.0

scala> "a" :: List()
res2: List[String] = List(a)

scala> "a".::(List())
<console>:8: error: value :: is not a member of String
              "a".::(List())
                  ^

